--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
     <!-- SCRIPTS -->
+    <script src="/src/js/flip-text-animation.js"></script>
+    <script src="/src/js/spotlight-navbar.js"></script>
     <script src="/src/js/particles.js"></script>
     <script src="/src/js/script.js"></script>
     <script src="/src/js/prefetch.js"></script>
