Add cache-busting to assets & remove blur
Append ?v=2.0 query param to stylesheet and script references to force clients to fetch updated assets (index.html and multiple pages under src/html/*). Also remove the explicit blur style from flip-text-animation.js so the animation handles blur visually; updated comment accordingly. Files changed: index.html, src/html/about.html, src/html/alumni.html, src/html/contact.html, src/html/events.html, src/html/projects.html, src/html/team.html, src/js/flip-text-animation.js.

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -129,7 +129,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
     <!-- SCRIPTS -->
-    <script src="/src/js/spotlight-navbar.js"></script>
+    <script src="/src/js/spotlight-navbar.js?v=2.0"></script>
     <script src="/src/js/particles.js"></script>
     <script src="/src/js/script.js"></script>
     <script src="/src/js/prefetch.js"></script>
