--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" as="script" />
     
     <!-- Main CSS -->
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="/src/css/style.css?v=2.0" />
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/images/apple-touch-icon.png">
@@ -148,8 +148,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
     <!-- SCRIPTS -->
-    <script src="/src/js/flip-text-animation.js"></script>
-    <script src="/src/js/spotlight-navbar.js"></script>
+    <script src="/src/js/flip-text-animation.js?v=2.0"></script>
+    <script src="/src/js/spotlight-navbar.js?v=2.0"></script>
     <script src="/src/js/particles.js"></script>
     <script src="/src/js/script.js"></script>
     <script src="/src/js/prefetch.js"></script>
