--- a/src/html/about.html
+++ b/src/html/about.html
@@ -27,10 +27,10 @@
     </style>
 
     <!-- Preload Critical Resources -->
-    <link rel="preload" href="/src/css/style.css" as="style" />
+    <link rel="preload" href="/src/css/style.css?v=3.0" as="style" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" as="script" />
 
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="/src/css/style.css?v=3.0" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -129,10 +129,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
     <!-- SCRIPTS -->
-    <script src="/src/js/spotlight-navbar.js?v=2.0"></script>
-    <script src="/src/js/particles.js"></script>
-    <script src="/src/js/script.js"></script>
-    <script src="/src/js/prefetch.js"></script>
-    <script src="/src/js/protection.js"></script>
+    <script src="/src/js/spotlight-navbar.js?v=3.0"></script>
+    <script src="/src/js/particles.js?v=3.0"></script>
+    <script src="/src/js/script.js?v=3.0"></script>
+    <script src="/src/js/prefetch.js?v=3.0"></script>
+    <script src="/src/js/protection.js?v=3.0"></script>
   </body>
 </html>
