Add toast notifications and update contact button
Introduce a toast notification system and update the contact form UI. Adds src/js/toast.js and src/css/toast.css (global window.toast with success/error variants, auto-dismiss and manual close, slide animations and responsive styles), updates src/css/style.css to a black send button with shine, loading and active states, swaps alert() calls for toast.success/error in src/js/contact.js, and injects the toast assets into src/html/contact.html. Also includes a TOAST_BUTTON_UPDATE.md changelog describing the UX changes.

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -31,6 +31,7 @@
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" as="script" />
 
     <link rel="stylesheet" href="/src/css/style.css?v=4.0" />
+    <link rel="stylesheet" href="/src/css/toast.css?v=1.0" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -191,6 +192,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
     <!-- SCRIPTS -->
+    <script src="/src/js/toast.js?v=1.0"></script>
     <script src="/src/js/spotlight-navbar.js?v=4.0"></script>
     <script src="/src/js/particles.js?v=4.0"></script>
     <script src="/src/js/script.js?v=4.0"></script>
