Add magnetic cursor glow to contact button
Introduce a magnetic cursor glow for the contact send button and refine related UI styles and behavior. Added src/js/magnetic-button.js to track cursor position and expose --mouse-x/--mouse-y CSS vars; wired the script into contact.html. Updated button markup (wrapped content in .button-text) and adjusted contact.js to preserve and restore the original button HTML while using the new .button-text wrapper for spinner/sent states. Style changes in src/css/style.css implement a radial gradient glow that follows the cursor, increase border-radius, tweak transitions and hover/active effects. Also refreshed toast UI in src/css/toast.css to a darker, glassy style with adjusted shadows, timing, and colors.

--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -112,7 +112,9 @@
             <textarea id="message" name="message" rows="5" placeholder="Your Message" required></textarea>
 
             <button type="button" onclick="sendMail()" class="contact-send-button">
-              <i class="fas fa-paper-plane"></i> Send Message
+              <span class="button-text">
+                <i class="fas fa-paper-plane"></i> Send Message
+              </span>
             </button>
           </form>
         </div>
@@ -193,6 +195,7 @@
 
     <!-- SCRIPTS -->
     <script src="/src/js/toast.js?v=1.0"></script>
+    <script src="/src/js/magnetic-button.js?v=1.0"></script>
     <script src="/src/js/spotlight-navbar.js?v=4.0"></script>
     <script src="/src/js/particles.js?v=4.0"></script>
     <script src="/src/js/script.js?v=4.0"></script>
