--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
     <!-- PARTICLE BACKGROUND -->
     <canvas id="particle-canvas"></canvas>
 
+    <!-- LOADING SCREEN -->
+    <div class="loading-screen">
+      <canvas class="liquid-text-canvas"></canvas>
+      <button class="loading-screen-skip" aria-label="Skip loading animation">
+        <span>Skip</span>
+        <i class="fas fa-forward"></i>
+      </button>
+    </div>
+
     <!-- PAGE TRANSITION -->
     <div class="page-transition"></div>
 
@@ -151,6 +160,12 @@
     <!-- GSAP -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
+    <!-- Liquid Text Loading Screen -->
+    <script src="/src/js/liquid-text/liquid-text-shaders.js"></script>
+    <script src="/src/js/liquid-text/liquid-text-utils.js"></script>
+    <script src="/src/js/liquid-text/liquid-text-renderer.js"></script>
+    <script src="/src/js/liquid-text/liquid-text-controller.js"></script>
 
     <script src="/src/js/toast.js?v=2.0"></script>
     <script src="/src/js/magnetic-button.js?v=2.0"></script>
