Add 404, robots, sitemap and SEO meta tags
Add a custom 404 page (with particles, GSAP animations, GTM/gtag, custom cursor and magnetic buttons) and include robots.txt and sitemap.xml. Update index.html and several section pages (about, alumni, contact, events, projects, team) with SEO/meta tags (descriptions, Open Graph absolute image/URL, and Twitter card metadata). Remove obsolete docs related to the contact form and UI (CONTACT_FORM_SETUP.md, TEST_CONTACT_FORM.md, TOAST_BUTTON_UPDATE.md). These changes improve SEO, analytics, and site discovery while cleaning up outdated documentation.

--- a/index.html
+++ b/index.html
@@ -23,8 +23,15 @@
     <!-- Open Graph -->
     <meta property="og:title" content="Robo Nexus - Robotics Club">
     <meta property="og:description" content="Inspiring innovation through robotics and technology">
-    <meta property="og:image" content="/src/assets/images/Robo_Nexus_Logo.png">
+    <meta property="og:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
+    <meta property="og:url" content="https://robonexusaisg46.netlify.app/">
     <meta property="og:type" content="website">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Robo Nexus - Robotics Club">
+    <meta name="twitter:description" content="Inspiring innovation through robotics and technology">
+    <meta name="twitter:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
 
     <!-- Critical CSS - Prevents white flash -->
     <style>
