--- a/src/html/about.html
+++ b/src/html/about.html
@@ -16,6 +16,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us | Robo Nexus</title>
 
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="Learn about Robo Nexus - The official robotics club of Amity International School, Sector-46, Gurugram.">
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="About Us | Robo Nexus">
+    <meta property="og:description" content="Learn about Robo Nexus - The official robotics club of Amity International School, Sector-46, Gurugram.">
+    <meta property="og:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
+    <meta property="og:url" content="https://robonexusaisg46.netlify.app/src/html/about.html">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Us | Robo Nexus">
+    <meta name="twitter:description" content="Learn about Robo Nexus - The official robotics club of Amity International School, Sector-46, Gurugram.">
+    <meta name="twitter:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
+
     <!-- Critical CSS - Prevents white flash -->
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
