--- a/src/html/alumni.html
+++ b/src/html/alumni.html
@@ -16,6 +16,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alumni | Robo Nexus</title>
 
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="Meet the Robo Nexus alumni - Former members who continue to inspire innovation in robotics and technology.">
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="Alumni | Robo Nexus">
+    <meta property="og:description" content="Meet the Robo Nexus alumni - Former members who continue to inspire innovation in robotics and technology.">
+    <meta property="og:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
+    <meta property="og:url" content="https://robonexusaisg46.netlify.app/src/html/alumni.html">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Alumni | Robo Nexus">
+    <meta name="twitter:description" content="Meet the Robo Nexus alumni - Former members who continue to inspire innovation in robotics and technology.">
+    <meta name="twitter:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
+
     <!-- Critical CSS - Prevents white flash -->
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
