--- a/src/html/projects.html
+++ b/src/html/projects.html
@@ -22,6 +22,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects | Robo Nexus</title>
 
+    <!-- Meta Tags for SEO -->
+    <meta name="description" content="Discover innovative robotics projects by Robo Nexus - From Arduino to advanced automation systems.">
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="Projects | Robo Nexus">
+    <meta property="og:description" content="Discover innovative robotics projects by Robo Nexus - From Arduino to advanced automation systems.">
+    <meta property="og:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
+    <meta property="og:url" content="https://robonexusaisg46.netlify.app/src/html/projects.html">
+    <meta property="og:type" content="website">
+    
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Projects | Robo Nexus">
+    <meta name="twitter:description" content="Discover innovative robotics projects by Robo Nexus - From Arduino to advanced automation systems.">
+    <meta name="twitter:image" content="https://robonexusaisg46.netlify.app/src/assets/images/Robo_Nexus_Logo.png">
+
     <!-- Critical CSS - Prevents white flash -->
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
