--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     </style>
 
     <!-- Preload Critical Resources -->
+    <link rel="preload" as="image" href="/src/assets/images/Robo_Nexus_Logo.png" />
     <link rel="preload" href="/src/css/style.css?v=7.0" as="style" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" as="script" />
     
@@ -58,7 +59,8 @@
 
     <!-- Font Awesome -->
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" media="print" onload="this.media='all'" />
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" /></noscript>
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -156,16 +158,16 @@
     </div>
 
     <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js" defer></script>
 
-    <script src="/src/js/toast.js?v=2.0"></script>
-    <script src="/src/js/magnetic-button.js?v=2.0"></script>
-    <script src="/src/js/spotlight-navbar.js?v=4.0"></script>
-    <script src="/src/js/particles.js?v=4.0"></script>
-    <script src="/src/js/script.js?v=7.0"></script>
-    <script src="/src/js/flip-text-animation.js?v=5.0"></script>
-    <script src="/src/js/prefetch.js?v=4.0"></script>
-    <script src="/src/js/protection.js?v=4.0"></script>
+    <script src="/src/js/toast.js?v=2.0" defer></script>
+    <script src="/src/js/magnetic-button.js?v=2.0" defer></script>
+    <script src="/src/js/spotlight-navbar.js?v=4.0" defer></script>
+    <script src="/src/js/particles.js?v=4.0" defer></script>
+    <script src="/src/js/script.js?v=7.0" defer></script>
+    <script src="/src/js/flip-text-animation.js?v=5.0" defer></script>
+    <script src="/src/js/prefetch.js?v=4.0" defer></script>
+    <script src="/src/js/protection.js?v=4.0" defer></script>
   </body>
 </html>
