--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -43,13 +43,15 @@
     </style>
 
     <!-- Preload Critical Resources -->
+    <link rel="preload" as="image" href="/src/assets/images/Robo_Nexus_Logo.png" />
     <link rel="preload" href="/src/css/style.css?v=8.0" as="style" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" as="script" />
 
     <link rel="stylesheet" href="/src/css/style.css?v=8.0" />
     <link rel="stylesheet" href="/src/css/toast.css?v=2.0" />
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" as="style" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" media="print" onload="this.media='all'" />
+    <noscript><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" /></noscript>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" as="style" />
@@ -208,18 +210,17 @@
     </div>
 
     <!-- GSAP -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" defer></script>
 
     <!-- SCRIPTS -->
-    <script src="/src/js/toast.js?v=2.0"></script>
-    <script src="/src/js/magnetic-button.js?v=2.0"></script>
-    <script src="/src/js/spotlight-navbar.js?v=4.0"></script>
-    <script src="/src/js/particles.js?v=4.0"></script>
-    <script src="/src/js/script.js?v=4.0"></script>
-    <script src="/src/js/contact.js?v=5.0"></script>
-    <script src="/src/js/prefetch.js?v=4.0"></script>
-    <script src="/src/js/protection.js?v=4.0"></script>
+    <script src="/src/js/toast.js?v=2.0" defer></script>
+    <script src="/src/js/magnetic-button.js?v=2.0" defer></script>
+    <script src="/src/js/spotlight-navbar.js?v=4.0" defer></script>
+    <script src="/src/js/particles.js?v=4.0" defer></script>
+    <script src="/src/js/script.js?v=4.0" defer></script>
+    <script src="/src/js/contact.js?v=5.0" defer></script>
+    <script src="/src/js/prefetch.js?v=4.0" defer></script>
+    <script src="/src/js/protection.js?v=4.0" defer></script>
 
 
   </body>
