Activate Team nav; add logs and eager loaders
Set the Team navigation link to active in alumni.html. In script.js, add console.debug/log statements for team and alumni loading lifecycle (loading, loaded, rendered, and container-not-found cases) and improve error messages. Also call loadTeamMembers() and loadAlumni() immediately in addition to keeping the DOMContentLoaded listeners so data begins loading sooner.

--- a/src/html/alumni.html
+++ b/src/html/alumni.html
@@ -88,7 +88,7 @@
               <ul class="nav-links-ul">
                 <li><a class="nav-links" href="/index.html" data-index="0">Home</a></li>
                 <li><a class="nav-links" href="/src/html/about.html" data-index="1">About</a></li>
-                <li><a class="nav-links" href="/src/html/team.html" data-index="2">Team</a></li>
+                <li><a class="nav-links active" href="/src/html/team.html" data-index="2">Team</a></li>
                 <li><a class="nav-links" href="/src/html/projects.html" data-index="3">Projects</a></li>
                 <li><a class="nav-links" href="/src/html/events.html" data-index="4">Events</a></li>
                 <li><a class="nav-links" href="/src/html/contact.html" data-index="5">Contact</a></li>
